<resources>
    <string name="app_name">CovidReport</string>
    <string name="state">State</string>
    <string name="total_cases">Total Cases</string>
    <string name="active_cases">Active Cases</string>
    <string name="recovered">Recovered</string>
    <string name="death">Death</string>
    <string name="updated_on">Updated On</string>
    <string name="server_is_not_reponding">Server is not reponding</string>
    <string name="blanck_list">List is empty</string>
    <string name="no_internet_connection">Make sure, you connected to internet</string>
</resources>