<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:elevation="2dp"
    android:background="@android:color/darker_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlCovid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/txtState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/state"/>

        <TextView
            android:id="@+id/txtTotalCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/txtState"
            app:layout_constraintTop_toBottomOf="@+id/txtState"
            android:text="@string/total_cases"/>

        <TextView
            android:id="@+id/txtActiveCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/txtState"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalCase"
            android:text="@string/active_cases"/>

        <TextView
            android:id="@+id/txtRecoverCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/txtState"
            app:layout_constraintTop_toBottomOf="@+id/txtActiveCase"
            android:text="@string/recovered"/>

        <TextView
            android:id="@+id/txtDeathCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/txtState"
            app:layout_constraintTop_toBottomOf="@+id/txtRecoverCase"
            android:text="@string/death"/>

        <TextView
            android:id="@+id/txtUpdatedOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/txtState"
            app:layout_constraintTop_toBottomOf="@+id/txtDeathCase"
            android:text="@string/updated_on"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>